# kaggle-spaceship-titanic

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_investigate_data.ipynb  02_asking_questions_of_the_data.ipynb
tests/: basic_test.py
